tests/baselines/reference/jsDeclarationsDefaultsErr(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
index2.js(2,22): error TS2300: Duplicate identifier 'C'.
index2.js(4,31): error TS2300: Duplicate identifier 'default'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== index1.js (0 errors) ====
    // merge type alias and alias (should error, see #32367)
    class Cls {
        x = 12;
        static y = "ok"
    }
    export default Cls;
    /**
     * @typedef {string | number} default
     */
    
==== index2.js (2 errors) ====
    // merge type alias and class (error message improvement needed, see #32368)
    export default class C {};
                         ~
!!! error TS2300: Duplicate identifier 'C'.
    /**
     * @typedef {string | number} default
                                  ~~~~~~~
!!! error TS2300: Duplicate identifier 'default'.
     */
    
==== index3.js (0 errors) ====
    // merge type alias and variable (behavior is borked, see #32366)
    const x = 12;
    export {x as default};
    /**
     * @typedef {string | number} default
     */
    